cmake_minimum_required(VERSION 3.20)

project(lc LANGUAGES CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

add_executable(1 1.cc)
add_executable(49 49.cc)
add_executable(128 128.cc)
add_executable(283 283.cc)
add_executable(11 11.cc)
add_executable(15 15.cc)

add_executable(3 3.cc)
add_executable(438 438.cc)

add_executable(560 560.cc)
add_executable(53 53.cc)
add_executable(56 56.cc)
add_executable(189 189.cc)
add_executable(238 238.cc)