cmake_minimum_required(VERSION 3.20)

project(lc LANGUAGES CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

# 2024-08-12
add_executable(1 1.cc)
add_executable(49 49.cc)
add_executable(128 128.cc)
add_executable(283 283.cc)
add_executable(11 11.cc)
add_executable(15 15.cc)

# 2024-08-13
add_executable(3 3.cc)
add_executable(438 438.cc)

# 2024-08-15
add_executable(560 560.cc)
add_executable(53 53.cc)
add_executable(56 56.cc)
add_executable(189 189.cc)
add_executable(238 238.cc)

# 2024-08-16
add_executable(160 160.cc)
add_executable(206 206.cc)
add_executable(234 234.cc)
add_executable(141 141.cc)
add_executable(142 142.cc)
add_executable(2 2.cc)
add_executable(19 19.cc)
add_executable(24 24.cc)

# 2024-08-17
add_executable(138 138.cc)
add_executable(148 148.cc)
add_executable(23 23.cc)
add_executable(146 146.cc)
add_executable(94 94.cc)

# 2024-09-07
add_executable(72 72.cc)